--- a/Curriculum Vitae/cv.html
+++ b/Curriculum Vitae/cv.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hamed - Software Engineer</title>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Single Page CV of Hamed , a Software Engineer."
+    />
+    <meta
+      name="keywords"
+      content="Frontend Developer, HTML, CSS, JavaScript, Resume, Web Development"
+    />
+    <meta name="author" content="Hamed" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Hamed - Software Engineer" />
+    <meta
+      property="og:description"
+      content="Single Page CV of Hamed, a Software Engineer."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/duidrgg1k/image/upload/v1725421776/male-technologist_n0fbey.png"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hamed.dev" />
+    <!-- Favicon -->
+    <link rel="icon" href="https://hamed.dev/favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
+    <header>
+      <h1>Hamed</h1>
+      <h2>Software Engineer</h2>
+      <div class="contact-info">
+        <address>
+          123 Azadi Street<br />
+          Sunshine, AZ 12345
+          <p>+98 912 345 1212</p>
+          <p>no_reply@example.com</p>
+        </address>
+      </div>
+    </header>
+    <main>
+      <section class="skill">
+        <h3 class="section-title">Skills</h3>
+        <p>
+          HTML, CSS, JavaScript, TypeScript, React, Agile Methodologies,
+          Accessibility, Figma, Git, Jira
+        </p>
+      </section>
+
+      <section class="education">
+        <h3 class="section-title">Education</h3>
+        <h4>Azad University, UT - B.S. Computer Science</h4>
+        <p>March 2024 to Present</p>
+
+        <p>Corentlly studing CS and i love</p>
+      </section>
+
+      <section class="experience">
+        <h3 class="section-title">Experience</h3>
+      </section>
+      <section class="internet">
+        <h3 class="section-title">Across the Internet</h3>
+        <a href="https://hamed.dev">hamed.dev</a><br />
+        <a href="https://www.linkedin.com/in/hamed/">LinkedIn</a><br />
+      </section>
+    </main>
+  </body>
+</html>
 
